--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,26 @@ input {
   color: #61dafb;
 }
 
+.fixed-nav-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 70px;
+    background-color: #f1efe2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.fixed-nav-bar p {
+    flex: 1;
+}
+
+.fixed-nav-bar p.active {
+    font-weight: bold;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
