Disabling scroll when tap originates on sliders

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ input {
   padding: 0px;
 }
 
+input[type=range] {
+    touch-action: none;
+}
+
 .input .subsection {
   background-color: #4b525e;
   margin: 0;
